--- a/bibliografia.bib
+++ b/bibliografia.bib
@@ -49,6 +49,13 @@
 	 Address = {New York, NY, USA},
 }
 
+@article{gantz2011,
+	Author = {John Gantz and David Reinsel},
+	Title = {Extracting Value from Chaos},
+	Year = {2011},
+	URL = {http://www.emc.com/collateral/analyst-reports/idc-extracting-value-from-chaos-ar.pdf},
+}
+
 @article{madhavji2015,
 	Author = {Nazim H. Madhavji and Andriy Miranskyy and Kostas Kontogiannis},
 	Title = {Big Picture of Big Data Software Engineering},
@@ -58,11 +65,18 @@
 	Organization = {IEEE Press},
 }
 
-@article{gantz2011,
-	Author = {John Gantz and David Reinsel},
-	Title = {Extracting Value from Chaos},
-	Year = {2011},
-	URL = {http://www.emc.com/collateral/analyst-reports/idc-extracting-value-from-chaos-ar.pdf},
+@article{moniruzzaman2013,
+  	Title={Nosql database: New era of databases for big data analytics-classification, characteristics and comparison},
+  	Author={Moniruzzaman, ABM and Hossain, Syed Akhter},
+  	Journal={arXiv preprint arXiv:1307.0191},
+  	Year={2013}
+}
+
+@article{strauch2011,
+  	Title={NoSQL databases},
+  	Author={Strauch, Christof and Sites, Ultra-Large Scale and Kriha, Walter},
+  	Journal={Lecture Notes, Stuttgart Media University},
+  	Year={2011}
 }
 
 @article{wu2014,
@@ -74,6 +88,26 @@
 	Number = {1},
 	Month = {January},
 	Pages = {97-107},
+}
+
+@article{zaharia2013,
+  	Title={An Architecture for and Fast and General Data Processing on Large Clusters},
+  	Author={Zaharia, Matei Alexandru},
+  	Year={2013}
+}
+
+@book{george2011,
+  	Title={HBase: the definitive guide},
+  	Author={George, Lars},
+  	Year={2011},
+ 	Publisher={" O'Reilly Media, Inc."}
+}
+
+@book{karau2015,
+  	Title={Learning Spark: Lightning-Fast Big Data Analysis},
+  	Author={Karau, Holden and Konwinski, Andy and Wendell, Patrick and Zaharia, Matei},
+  	Year={2015},
+  	Publisher={" O'Reilly Media, Inc."}
 }
 
 @book{white2015,
@@ -154,6 +188,25 @@
 	isbn = {85-87090-90-9},
 }
 
+@inproceedings{alam2014,
+	Author = {A. Alam and J. Ahmed},
+	Booktitle={Computational Science and Computational Intelligence (CSCI), 2014 International Conference on},
+	Title = {Hadoop Architecture and Its Issues},
+	Volume={2},
+	Pages = {288-291},
+	Year = {2014},
+	DOI={10.1109/CSCI.2014.140},
+	Month={March},
+}
+
+@inproceedings{carstoiu2010,
+	Author = {Dorin Carstoiu and Elena Lepadatu and Mihai Gaspar and Dorin Carstoiu and Elena Lepadatu and Mihai Gaspar},
+	Title = {Hbase - non SQL Database, Performances Evaluation},
+	Booktitle = {in Computer Science (1986), Master in Computer Science (1990), and PhD in Computer Science},
+	Year = {2010},
+	Pages = {42--52}
+}
+
 @inproceedings{khan2009,
 	 Author = {Khan, Muhammad Usman and Khan, Shoab Ahmed},
 	 Title = {Social Networks Identification and Analysis Using Call Detail Records},
@@ -171,15 +224,15 @@
 	 Address = {New York, NY, USA},
 }
 
-@inproceedings{alam2014,
-	Author = {A. Alam and J. Ahmed},
-	Booktitle={Computational Science and Computational Intelligence (CSCI), 2014 International Conference on},
-	Title = {Hadoop Architecture and Its Issues},
-	Volume={2},
-	Pages = {288-291},
-	Year = {2014},
-	DOI={10.1109/CSCI.2014.140},
-	Month={March},
+@inproceedings{vora2011,
+	Author = {Mehul Nalin Vora},
+	Title = {Hadoop-HBase for large-scale data},
+	Booktitle = {Computer Science and Network Technology (ICCSNT), 2011 International Conference on},
+	Pages = {601-605},
+	Year = {2011},
+	Volume = {1},
+	DOI = {10.1109/ICCSNT.2011.6182030}, 
+	URL = {http://hdl.handle.net/10261/116477},
 }
 
 @inproceedings{tugores2013,
@@ -252,40 +305,6 @@
 	 Address = {New York, NY, USA},
 }
 
-@article{clark1986,
-	Author = {J. A. Clark},
-	Title = {Private Communication},
-	Year = {1986},
-	Address = {University of Michigan},
-}
-
-@article{arruda2007,
-	Author = {M. B. B. Arruda},
-	Title = {Como fazer referências: bibliográficas, eletrônicas e demais
-	formas de documentos},
-	Year = {2007},
-	Url = {http://bu.ufsc.br/framerefer.html}
-}
-
-@article{coimbra1978,
-	Author = {A. L. Coimbra},
-	Title = {Lessons of Continuum Mechanics},
-	Year = {1978},
-	Address = {São Paulo, Brazil},
-	Pages = {428},
-	Editor = {Edgard Blücher},
-}
-
-@inproceedings{bordalo1989,
-	Author = {S. N. Bordalo and J. H. Ferziger and S. J. Kline},
-	Title = {The Development of Zonal Models for Turbulence},
-	Year = {1989},
-	Pages = {41-44},
-	Booktitle = {Proceedings of the 10th Brazilian Congress of Mechanical
-	Engineering},
-	Volume = {1},
-}
-
 @manual{3gppts2010,
 	Author = {TS ThreeGPP},
 	Title = {Charging Data Record (CDR) parameter description TS V8.8.0},
@@ -297,25 +316,4 @@
 	Note = {Technical Specification},
 }
 
-@manual{NBR14724:2011,
-	Address = {Rio de Janeiro},
-	Date-Added = {2012-12-15 20:34:08 +0000},
-	Date-Modified = {2012-12-15 20:35:25 +0000},
-	Month = mar,
-	Org-Short = {ABNT},
-	Organization = {Associa{\c c}\~ao Brasileira de Normas T\'ecnicas},
-	Pages = 15,
-	Subtitle = {Informa{\c c}\~ao e documenta{\c c}\~ao --- trabalhos acad\^emicos --- apresenta{\c c}\~ao},
-	Title = {{NBR} 14724},
-	Year = 2011
-}
-
-@manual{NBR6034:2000,
-	Address = {Rio de Janeiro},
-	Org-Short = {ABNT},
-	Organization = {Associa{\c c}\~ao Brasileira de Normas T\'ecnicas},
-	Subtitle = {Informa{\c c}\~ao e documenta{\c c}\~ao --- Referências},
-	Title = {{NBR} 14724},
-	Year = 2000
-}
 
